--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "dev": "nodemon --watch ./server server/index.js"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mongodb": "^6.2.0"
   },
   "devDependencies": {
+    "@types/node": "20.8.9",
+    "@types/express": "^4.17.20",
     "nodemon": "^3.0.1"
   }
 
