--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
   "license": "ISC",
 
   "scripts": {
+    "build":"npm i --production && cd client && npm i && npm run build",
     "start": "node server/index.js",
     "dev": "nodemon --watch ./server server/index.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
+    "express": "^4.17.20",
+    "dotenv":"^16.3.1",
+    "jsonwebtoken":"^9.0.2",
     "mongodb": "^6.2.0"
   },
   "devDependencies": {
